# md-to-mermaid

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: depenabot.yml
.github/workflows/: publish.yml  test.yml
md_to_mermaid/: file_parser.py  md_to_mermaid.py
md_to_mermaid/md_to_mermaid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.md  conftest.py  test.py  test_file_parser.py  test_md_mermaid.py  test_md_parser.py
